# affiliated_professors

./: .env.example  .gitignore  PROFESSORS.md  README.md  devbox.json  professors.yaml  pyproject.toml
.github/workflows/: update.yml
professors/: ALESSANDRO-CHIESA.md  ANDREA-CAVALLARO.md  ANNE-MARIE-KERMARREC.md  ANNIE-HARTLEY.md  ANTOINE-BOSSELUT.md  BABAK-FALSAFI.md  BOI-FALTINGS.md  BRYAN-FORD.md  CAGLAR-GULCEHRE.md  CARMELA-TRONCOSO.md  CHARLOTTE-BUNNE.md  CLEMENT-PIT-CLAUDEL.md  DAMIR-FILIPOVIC.md  DAVID-ATIENZA.md  EDOUARD-BUGNION.md  FLORENCE-GRAEZER-BIDEAU.md  GAETAN-DE-RASSENFOSSE.md  GEORGE-CANDEA.md  GIOVANNI-DE-MICHELI.md  JACQUES-FELLAY.md  JULIEN-HUGONNIER.md  KATERINA-ARGYRAKI.md  MARCEL-SALATHE.md  MARIO-PAOLONE.md  MARTIN-JAGGI.md  MARTIN-ODERSKY.md  MATHIAS-PAYER.md  MATTHIAS-GROSSGLAUSER.md  NATE-FOSTER.md  NICOLAS-FLAMMARION.md  PAOLO-IENNE.md  PASCAL-FROSSARD.md  PIERRE-COLLIN-DUFRESNE.md  RACHID-GUERRAOUI.md  ROBERT-WEST.md  RUEDIGER-FAHLENBRACH.md  SABINE-SUSSTRUNK.md  SANIDHYA-KASHYAP.md  SEMYON-MALAMUD.md  SERGE-VAUDENAY.md  (+6 more)
src/prof_tracker/: __init__.py  agent.py  bootstrap.py  cli.py  matrix.py  models.py  registry.py  render.py  sources.py
tests/: test_registry.py  test_render.py  test_sources.py
