[project]
name = "prof-tracker"
version = "0.1.0"
description = "Agentic tracker for C4DT affiliated professors"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[openai,anthropic]>=0.0.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
prof-tracker = "prof_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prof_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
